Update page title and add logo to sidebar
Changed the document title to 'kanban' and added a logo image to the navigation sidebar for improved branding.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
   <head>
     <meta />
     <meta />
-    <title>Document</title>
+    <title>kanban</title>
   </head>
 
   <body>
     <!-- Navigation Sidebar: Contains the logo, navigation links for boards, and theme toggle. -->
     <nav>
       <div>
+        <img src="assets/logo-light.svg" alt="kanban logo" />
         <h4>ALL BOARDS (1)</h4>
         <button>Launch Career</button>
       </div>
