Update HTML head and body for Tailwind support
Added charset and viewport meta tags, included Tailwind CSS via CDN, and updated body classes for improved styling. These changes enhance responsiveness and typography using Tailwind and Plus Jakarta Sans.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
   <head>
-    <meta />
-    <meta />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>kanban</title>
   </head>
 
-  <body>
+  <body class="font-[Plus Jakarta Sans] text-[#000112] bg-[#FFFFFF]">
     <!-- Navigation Sidebar: Contains the logo, navigation links for boards, and theme toggle. -->
     <nav>
       <div>
@@ -18,8 +19,8 @@
     <!-- Main Layout: Header with board title, add task button, and main content area for task columns. -->
     <div>
       <header>
-        <div>
-          <h2>Launch Career</h2>
+        <div >
+          <h2 class=>Launch Career</h2>
         </div>
       </header>
 
