--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body class="font-[Plus Jakarta Sans] text-[#000112] bg-[#F4F7FD]">
     <!-- Navigation Sidebar: Contains the logo, navigation links for boards, and theme toggle. -->
     <nav
-      class="hidden md:flex flex-col md:w-64 bg-[#ffffff] border-r border-[#E4EBFA] px-6 py-7 h-screen fixed"
+      class="hidden md:flex flex-col md:w-64 bg-[#ffffff] border-r border-[#E4EBFA] pr-[20px] h-screen fixed"
     >
       <div class="space-y-6">
         <img src="assets/logo-light.svg" alt="kanban logo" class="h-6">
-        <h4 class="">ALL BOARDS (1)</h4>
-        <button>Launch Career</button>
+        <h4 class="text-xs font-semibold tracking-wider text-[#828FA3] uppercase px-6">ALL BOARDS (1)</h4>
+        <button class="bg-[#635fc7] hover:bg-[A8A4FF] transition text-[#FFFFFF] py-[8px] px-[16px] rounded-r-[30px] text-[18px] font-medium w-full text-center">Launch Career</button>
       </div>
     </nav>
 
