updated index.html add nav bar
add navigation where I added the images and the heddings

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
    <script src="https://cdn.tailwindcss.com"></script>
   <title>Kanaban</title>
 </head>
-<body>
+<body class="font-[plus Jakarta sans] text-[#000112] bg-[#F4F7FD]">
+  <!--Side bar: Hidden on mobile shows on md+-->
+  <nav>
+    <img src="assets/logo-light.svg" alt="kanban">
+    ,<img src="assets/favicon.svg" alt="kanban icon">
+    <h4>ALL BOARDS(1)</h4>
+    <button>Launch Career</button>
+  </nav>
   
 </body>
 </html>
