updated index.html added style
added styles to the html

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body class="font-[plus Jakarta sans] text-[#000112] bg-[#F4F7FD]">
   <!--Side bar: Hidden on mobile shows on md+-->
-  <nav>
-    <img src="assets/logo-light.svg" alt="kanban">
-    ,<img src="assets/favicon.svg" alt="kanban icon">
-    <h4>ALL BOARDS(1)</h4>
-    <button>Launch Career</button>
+  <nav class="hidden md:flex flex-col md:w-[250px] bg-[#FFFFFF] border-r border-[#E4EBFA] p-[24px] h-screen fixed">
+    <img src="assets/logo-light.svg" alt="kanban" class="h-[24px] mb-[32px]">
+    <img src="assets/favicon.svg" alt="kanban icon"class="h-[24px] mb-[32px]">
+    <h4 class="text-xs font-semibold tracking-wider text-[#828FA3] uppercase mb-4">ALL BOARDS(1)</h4>
+    <button class="bg-[#635FC7] hover:bg-[#A8A4FF] transition text-white py-[8px] px-[16px] rounded-r-[30px] text-lg font-medium w-full text-center">Launch Career</button>
   </nav>
   
 </body>
