--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     <h4 class="text-xs font-semibold tracking-wider text-[#828FA3] uppercase mb-4">ALL BOARDS(1)</h4>
     <button class="bg-[#635FC7] hover:bg-[#A8A4FF] transition text-white py-[8px] px-[16px] rounded-r-[30px] text-lg font-medium w-full text-center">Launch Career</button>
   </nav>
-  
+  <!--end of the sidebar-->
+
+
+  <!--Main content-->
+  <div>
+    <!--Header-->
+    <header>
+      <h2>Launch Career</h2>
+    </header>
+  </div>
 </body>
 </html>
