updated index.html added style
added styling for the header

--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
 
 
   <!--Main content-->
-  <div>
+  <div class="md:ml-[250px] sm:p-[24px] md:p-[36px] lg:p-[48px]">
     <!--Header-->
-    <header>
-      <h2>Launch Career</h2>
+    <header class="mb-[24px] sm:mb-[36px] flex flex-wrap items-center justify-between gap-[16px] bg-[#FFFFFF] ml-[-100px] mt-[-50px] p-[60px]">
+      <h2 class="text-[24px] line-height-[30px] font-bold sm:text-2xl text-[#000112]">Launch Career</h2>
     </header>
+    <!--End of header-->
+
+    
   </div>
 </body>
 </html>
