updated index.html added kanban columns
added added todo column

--- a/index.html
+++ b/index.html
@@ -25,7 +25,17 @@
     </header>
     <!--End of header-->
 
-    
+   <!--Kanban columns--> 
+   <main>
+
+    <!--TODO-->
+    <div>
+      <h4><span>🔵</span>TODO</h4>
+      <div>>Launch Epic Career 🚀</div>
+      <div>Learn Data Structures & Algorithms 📚</div>
+    </div>
+
+   </main>
   </div>
 </body>
 </html>
