Updated Index.html added styling
added styling to the todo and added more todo

--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@
     <!--End of header-->
 
    <!--Kanban columns--> 
-   <main>
+   <main class="flex flex-col gap-[24px] sm:grid sm:grid-col-2 lg:grid-col-3">
 
     <!--TODO-->
     <div>
-      <h4><span>🔵</span>TODO</h4>
-      <div>>Launch Epic Career 🚀</div>
-      <div>Learn Data Structures & Algorithms 📚</div>
+      <h4 class="text-sm font-bold tracking-wider text-[#828FA3] uppercase mb-[16px] flex items-center gap-[8px]" ><span>🔵</span>Todo</h4>
+      <div class="spcace-y-[12px]">
+        <div class="bg-[#FFFFFF] p-[24px] rounded-[30px] w-[250px] shadow-sm font-medium text-[#20212C]">Launch Epic Career 🚀</div>
+        <div class="bg-[#FFFFFF] p-[24px] rounded-[30px] w-[250px] shadow-sm font-medium text-[#20212C] mt-[15px]">Conquer React ♓ </div>
+        <div class="bg-[#FFFFFF] p-[24px] rounded-[30px] w-[250px] shadow-sm font-medium text-[#20212C] mt-[15px]">Understand Databases 👨‍💻 </div>
+        <div class="bg-[#FFFFFF] p-[24px] rounded-[30px] w-[250px] shadow-sm font-medium text-[#20212C] mt-[15px]">Crush Frameworks 🖼️</div>
+      </div>
     </div>
 
    </main>
