updated Index.html added done column
added done column and styled it

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <img
         src="assets/logo-light.svg"
         alt="kanban"
-        class="h-[24px] mb-[32px]"
+        class="h-[24px] mb-[32px] sm:shown"
       />
       <img
         src="assets/favicon.svg"
         alt="kanban icon"
-        class="h-[24px] mb-[32px]"
+        class="h-[24px] mb-[32px] md:hidden"
       />
       <h4
         class="text-xs font-semibold tracking-wider text-[#828FA3] uppercase mb-4"
@@ -98,14 +98,22 @@
             <div
               class="bg-[#FFFFFF] p-[24px] rounded-[30px] w-[250px] shadow-sm font-medium text-[#20212C] mt-[15px]"
             >
-              Never giving up 💪
+              Keep on Going 🏆
             </div>
           </div>
         </div>
         <!--End of DOING-->
 
         <!--DONE-->
-        
+        <div>
+      <h4 class="text-sm font-bold tracking-wider text-[#828FA3] uppercase mb-[16px] flex items-center gap-[8px]" ><span>🟢</span>done</h4>
+      <div class="spcace-y-[12px]">
+        <div class="bg-[#FFFFFF] p-[24px] rounded-[30px] w-[250px] shadow-sm font-medium text-[#20212C]">Build Portfolio Piece 🛠️</div>
+        <div class="bg-[#FFFFFF] p-[24px] rounded-[30px] w-[250px] shadow-sm font-medium text-[#20212C] mt-[15px]">Learn HTML </div>
+        <div class="bg-[#FFFFFF] p-[24px] rounded-[30px] w-[250px] shadow-sm font-medium text-[#20212C] mt-[15px]">Reading LMS Content 📖 </div>
+        <div class="bg-[#FFFFFF] p-[24px] rounded-[30px] w-[250px] shadow-sm font-medium text-[#20212C] mt-[15px]">Have Fun 🛝</div>
+      </div>
+    </div>  
       </main>
     </div>
   </body>
