updated Index.html added pixel perfect styling

--- a/index.html
+++ b/index.html
@@ -9,33 +9,35 @@
   <body class="font-[Plus Jakarta Sans] text-[#000112] bg-[#F4F7FD] min-h-screen">
     <div class="flex min-h-screen">
       <!-- Sidebar -->
-      <nav class="hidden md:flex flex-col w-[250px] bg-white border-r border-[#E4EBFA] p-6">
-        <img src="assets/logo-light.svg" alt="kanban" class="h-[25px] w-auto mb-8" />
-        <h4 class="text-xs font-semibold tracking-[2.4px] text-[#828FA3] uppercase mb-4">ALL BOARDS (1)</h4>
-        <button class="bg-[#635FC7] hover:bg-[#A8A4FF] text-white font-bold py-2 px-4 rounded-tr-full rounded-br-full">
+      <nav class="hidden md:flex flex-col w-[250px] bg-white border-r border-[#E4EBFA] p-6 w-[300px] h-[1024px]">
+        <img src="assets/logo-light.svg" alt="kanban" class="h-[25.22px] t-[32.78px] l-[34px] w-[152.53px] mb-8" />
+        <div class="w-[276px] h-[880px] t-[112px]">
+        <h4 class="text-[12px] font-semibold tracking-[2.4px] text-[#828FA3] uppercase mb-4 w-[123px] h-[15px] l-[32px]">ALL BOARDS (1)</h4>
+        <button class="bg-[#635FC7] hover:bg-[#A8A4FF] text-[#FFFFFF] font-bold W-[276px] H-[48px] t-[34px] ">
           Launch Career
         </button>
+        </div>
       </nav>
 
       <!-- Main content -->
       <div class="flex-1 p-4 sm:p-6 md:p-8">
         <!-- Mobile Header -->
-        <header class="mb-[24px] sm:mb-[36px] flex flex-wrap items-center justify-between gap-[16px] bg-[#FFFFFF] mr-[-50px] ml-[-30px] mt-[-50px] p-[60px] ">
+        <header class="mb-[24px] sm:mb-[36px] flex flex-wrap items-center justify-between gap-[16px] bg-[#FFFFFF] mr-[-50px] ml-[-30px] mt-[-50px] p-[60px] w-[1140px] h-[97px] l-[300px] ">
           <h2 class="text-xl font-bold">Launch Career</h2>
         </header>
 
         <!-- Kanban Board -->
-        <main class="grid gap-6 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
+        <main class="grid gap-6 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 w-[1192px] h-[853px] t-[121px] l-[324px]">
           <!-- Column -->
           <section>
             <h4 class="text-sm font-bold tracking-wider text-[#828FA3] uppercase mb-4 flex items-center gap-2">
               <span>🔵</span> Todo
             </h4>
-            <div class="space-y-3">
-              <div class="bg-white p-4 rounded-lg shadow">Launch Epic Career 🚀</div>
-              <div class="bg-white p-4 rounded-lg shadow">Conquer React ♓</div>
-              <div class="bg-white p-4 rounded-lg shadow">Understand Databases 👨‍💻</div>
-              <div class="bg-white p-4 rounded-lg shadow">Crush Frameworks 🖼️</div>
+            <div class="space-y-3 text-[15px] font-bold" >
+              <div class="bg-white p-4 w-[280px] h-[60px] top-[160px] left-[324px] rounded-[8px] shadow-[#364E7E]">Launch Epic Career 🚀</div>
+              <div class="bg-white p-4 w-[280px] h-[60px] top-[240px] left-[324px] rounded-[8px] shadow-[#364E7E]">Conquer React ♓</div>
+              <div class="bg-white p-4 w-[280px] h-[60px] top-[320px] left-[324px] rounded-[8px] shadow-[#364E7E]">Understand Databases 👨‍💻</div>
+              <div class="bg-white p-4 w-[280px] h-[60px] top-[400px] left-[324px] rounded-[8px] shadow-[#364E7E]">Crush Frameworks 🖼️</div>
             </div>
           </section>
 
