--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Kanban</title>
   </head>
-  <body class="font-[Plus Jakarta Sans] text-[#000112] bg-[#F4F7FD] min-h-screen">
+  <body class="font-[Plus Jakarta Sans] text-[#000112] bg-[#F4F7FD] w-[1440px] h-[1024px] t-[771px] l-[2015px]">
     <div class="flex min-h-screen">
       <!-- Sidebar -->
       <nav class="hidden md:flex flex-col w-[250px] bg-white border-r border-[#E4EBFA] p-6 w-[300px] h-[1024px]">
         <img src="assets/logo-light.svg" alt="kanban" class="h-[25.22px] t-[32.78px] l-[34px] w-[152.53px] mb-8" />
         <div class="w-[276px] h-[880px] t-[112px]">
         <h4 class="text-[12px] font-semibold tracking-[2.4px] text-[#828FA3] uppercase mb-4 w-[123px] h-[15px] l-[32px]">ALL BOARDS (1)</h4>
-        <button class="bg-[#635FC7] hover:bg-[#A8A4FF] text-[#FFFFFF] font-bold W-[276px] H-[48px] t-[34px] ">
+        <button class="bg-[#635FC7] hover:bg-[#A8A4FF] text-[#FFFFFF] font-bold indent-[20px] ml-[-20px] pl-[10px] pr-[150px] pb-[20px] pt-[10px] W-[276px] H-[48px] t-[34px] rounded-tr-[100px] rounded-br-[100px] "> 
           Launch Career
         </button>
         </div>
@@ -22,7 +22,7 @@
       <!-- Main content -->
       <div class="flex-1 p-4 sm:p-6 md:p-8">
         <!-- Mobile Header -->
-        <header class="mb-[24px] sm:mb-[36px] flex flex-wrap items-center justify-between gap-[16px] bg-[#FFFFFF] mr-[-50px] ml-[-30px] mt-[-50px] p-[60px] w-[1140px] h-[97px] l-[300px] ">
+        <header class="mb-[24px] sm:mb-[36px] flex flex-wrap items-center justify-between gap-[16px] bg-[#FFFFFF] mr-[100px] ml-[-30px] mt-[-50px] p-[60px] w-[1250px] h-[97px] l-[300px] ">
           <h2 class="text-xl font-bold">Launch Career</h2>
         </header>
 
@@ -31,37 +31,37 @@
           <!-- Column -->
           <section>
             <h4 class="text-sm font-bold tracking-wider text-[#828FA3] uppercase mb-4 flex items-center gap-2">
-              <span>🔵</span> Todo
+              <span>🔵</span> Todo(4)
             </h4>
-            <div class="space-y-3 text-[15px] font-bold" >
-              <div class="bg-white p-4 w-[280px] h-[60px] top-[160px] left-[324px] rounded-[8px] shadow-[#364E7E]">Launch Epic Career 🚀</div>
-              <div class="bg-white p-4 w-[280px] h-[60px] top-[240px] left-[324px] rounded-[8px] shadow-[#364E7E]">Conquer React ♓</div>
-              <div class="bg-white p-4 w-[280px] h-[60px] top-[320px] left-[324px] rounded-[8px] shadow-[#364E7E]">Understand Databases 👨‍💻</div>
-              <div class="bg-white p-4 w-[280px] h-[60px] top-[400px] left-[324px] rounded-[8px] shadow-[#364E7E]">Crush Frameworks 🖼️</div>
+            <div class="space-y-3 text-[15px] font-bold text-[#000112]" >
+              <div class="bg-white p-4 w-[280px] h-[60px] top-[160px] left-[324px] rounded-[8px] shadow-[#F4F7FD]">Launch Epic Career 🚀</div>
+              <div class="bg-white p-4 w-[280px] h-[60px] top-[240px] left-[324px] rounded-[8px] shadow-[#F4F7FD]">Conquer React ♓</div>
+              <div class="bg-white p-4 w-[280px] h-[60px] top-[320px] left-[324px] rounded-[8px] shadow-[#F4F7FD]">Understand Databases 👨‍💻</div>
+              <div class="bg-white p-4 w-[280px] h-[60px] top-[400px] left-[324px] rounded-[8px] shadow-[#F4F7FD]">Crush Frameworks 🖼️</div>
             </div>
           </section>
 
           <!-- Column -->
           <section>
-            <h4 class="text-sm font-bold tracking-wider text-[#828FA3] uppercase mb-4 flex items-center gap-2">
-              <span>🟣</span> Doing
+            <h4 class="text-sm font-bold md:ml-[-100px] tracking-wider text-[#828FA3] uppercase mb-4 flex items-center gap-2">
+              <span>🟣</span> Doing(2)
             </h4>
-            <div class="space-y-3">
-              <div class="bg-white p-4 rounded-lg shadow">Mastering JavaScript 🧙‍♂️</div>
-              <div class="bg-white p-4 rounded-lg shadow">Keep on Going 🏆</div>
+            <div class="space-y-3 text-[15px] font-bold text-[#000112] md:ml-[-100px] ">
+              <div class="bg-[#FFFFFF] p-4 w-[280px] h-[60px] t-[159px] l-[623px] rounded-[8px] shadow-[#F4F7FD]">Mastering JavaScript 🧙‍♂️</div>
+              <div class="bg-[#FFFFFF] p-4 w-[280px] h-[60px] t-[240px] l-[623px] rounded-[8px] shadow-[#F4F7FD]">Keep on Going 🏆</div>
             </div>
           </section>
 
           <!-- Column -->
           <section>
-            <h4 class="text-sm font-bold tracking-wider text-[#828FA3] uppercase mb-4 flex items-center gap-2">
-              <span>🟢</span> Done
+            <h4 class="text-sm font-bold md:ml-[-190px] tracking-wider text-[#828FA3] uppercase mb-4 flex items-center gap-2">
+              <span>🟢</span> Done(4)
             </h4>
-            <div class="space-y-3">
-              <div class="bg-white p-4 rounded-lg shadow">Build Portfolio Piece 🛠️</div>
-              <div class="bg-white p-4 rounded-lg shadow">Learn HTML</div>
-              <div class="bg-white p-4 rounded-lg shadow">Reading LMS Content 📖</div>
-              <div class="bg-white p-4 rounded-lg shadow">Have Fun 🛝</div>
+            <div class="space-y-3 text-[15px] font-bold text-[#000112] mdmd:ml-[-190px]">
+              <div class="bg-white p-4 w-[280px] h-[60px] t-[160px] l-[932px] rounded-[8px] shadow-[#F4F7FD]">Build Portfolio Piece 🛠️</div>
+              <div class="bg-white p-4 w-[280px] h-[60px] t-[240px] l-[932px] rounded-[8px] shadow-[#F4F7FD]">Learn HTML</div>
+              <div class="bg-white p-4 w-[280px] h-[60px] t-[320px] l-[932px] rounded-[8px] shadow-[#F4F7FD]">Reading LMS Content 📖</div>
+              <div class="bg-white p-4 w-[280px] h-[60px] t-[400px] l-[932px] rounded-[8px] shadow-[#F4F7FD]">Have Fun 🛝</div>
             </div>
           </section>
         </main>
