--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h4 class="text-sm font-bold md:ml-[-190px] tracking-wider text-[#828FA3] uppercase mb-4 flex items-center gap-2">
               <span>🟢</span> Done(4)
             </h4>
-            <div class="space-y-3 text-[15px] font-bold text-[#000112] mdmd:ml-[-190px]">
+            <div class="space-y-3 text-[15px] font-bold text-[#000112] md:ml-[-190px]">
               <div class="bg-white p-4 w-[280px] h-[60px] t-[160px] l-[932px] rounded-[8px] shadow-[#F4F7FD]">Build Portfolio Piece 🛠️</div>
               <div class="bg-white p-4 w-[280px] h-[60px] t-[240px] l-[932px] rounded-[8px] shadow-[#F4F7FD]">Learn HTML</div>
               <div class="bg-white p-4 w-[280px] h-[60px] t-[320px] l-[932px] rounded-[8px] shadow-[#F4F7FD]">Reading LMS Content 📖</div>
