--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="styles/styles.css">
     <link
       rel="icon"
       type="image/png"
